--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".UserAuthSignUp"></activity>
+        <activity android:name=".AboutUs"></activity>
+        <activity android:name=".CreateLandPost" />
+        <activity android:name=".UserAuthSignUp" />
         <activity android:name=".UserAuthLogin" />
         <activity android:name=".AdminLogin" />
         <activity android:name=".StartUp">
